fixing css spacing on desktop

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ header {
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
-    padding: 120px 20px 0 20px;
+    padding: 130px 20px 0 20px;
 }
 
 main {
@@ -188,6 +188,7 @@ nav {
 
     h1 {
         font-size: 2.775rem;
+        margin-top: 75px;
     }
 
     h2 {
